# ruflix

./: .env  Cargo.toml  README.md
src/: args.rs  db.rs  main.rs  schema.rs
