[package]
name = "ruflix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["postgre", "chrono"] }
dotenv = "0.15.0"
chrono = "^0"
clap = { version = "3.1.9", features = ["derive"] }